--- a/package.json
+++ b/package.json
@@ -5,5 +5,23 @@
   "main": "index.js",
   "repository": "git@github.com:skyuplam/start-react.git",
   "author": "Terrence Lam <skyuplam@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "koa": "next",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-router": "next"
+  },
+  "scripts": {
+    "start:dev": "cross-env NODE_ENV=development nodemon --exec babel-node ./src/server"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-preset-env": "^1.1.8",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-3": "^6.17.0",
+    "cross-env": "^3.1.4"
+  }
 }
