--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "dependencies": {
     "koa": "next",
+    "koa-compress": "next",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-router": "next"
