--- a/package.json
+++ b/package.json
@@ -9,20 +9,39 @@
   "dependencies": {
     "koa": "next",
     "koa-compress": "next",
+    "koa-mount": "next",
+    "koa-static": "next",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router": "next"
+    "react-helmet": "^3.3.0",
+    "react-router": "next",
+    "serialize-javascript": "^1.3.0"
   },
   "scripts": {
-    "start:dev": "cross-env NODE_ENV=development nodemon --exec babel-node ./src/server"
+    "clean": "rimraf dist",
+    "build": "yarn run clean && cross-env NODE_ENV=production babel src -d dist",
+    "start": "cross-env NODE_ENV=development nodemon --exec babel-node ./src/server",
+    "start:dev": "cross-env NODE_ENV=development nodemon --exec babel-node ./internal/webpack/server",
+    "serve": "cross-env NODE_ENV=production node dist/server"
   },
   "devDependencies": {
+    "assets-webpack-plugin": "^3.5.0",
     "babel-cli": "^6.18.0",
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
+    "babel-polyfill": "^6.20.0",
     "babel-preset-env": "^1.1.8",
+    "babel-preset-latest": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-3": "^6.17.0",
-    "cross-env": "^3.1.4"
+    "cross-env": "^3.1.4",
+    "css-loader": "^0.26.1",
+    "eventsource-polyfill": "^0.9.6",
+    "happypack": "^3.0.2",
+    "koa-webpack-middleware": "^1.0.3",
+    "react-hot-loader": "next",
+    "style-loader": "^0.13.1",
+    "webpack": "beta",
+    "webpack-node-externals": "^1.5.4"
   }
 }
