--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "koa-compress": "next",
     "koa-mount": "next",
     "koa-static": "next",
+    "offline-plugin": "^4.5.5",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-helmet": "^3.3.0",
@@ -18,8 +19,10 @@
     "serialize-javascript": "^1.3.0"
   },
   "scripts": {
-    "clean": "rimraf dist",
+    "clean": "rimraf dist build",
     "build": "yarn run clean && cross-env NODE_ENV=production babel src -d dist",
+    "build:client": "yarn run clean && cross-env NODE_ENV=production babel-node ./internal/scripts/build.js",
+    "webpack": "cross-env NODE_ENV=production webpack -p --progress --config ./internal/webpack/client.prod.config.js",
     "start": "cross-env NODE_ENV=development nodemon --exec babel-node ./src/server",
     "start:dev": "cross-env NODE_ENV=development nodemon --exec babel-node ./internal/webpack/server",
     "serve": "cross-env NODE_ENV=production node dist/server"
@@ -37,9 +40,11 @@
     "cross-env": "^3.1.4",
     "css-loader": "^0.26.1",
     "eventsource-polyfill": "^0.9.6",
+    "extract-text-webpack-plugin": "next",
     "happypack": "^3.0.2",
     "koa-webpack-middleware": "^1.0.3",
     "react-hot-loader": "next",
+    "rimraf": "^2.5.4",
     "style-loader": "^0.13.1",
     "webpack": "beta",
     "webpack-node-externals": "^1.5.4"
