--- a/.gitignore
+++ b/.gitignore
@@ -99,7 +99,8 @@ coverage
 .lock-wscript
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
-build/Release
+build
+dist
 
 # Dependency directories
 node_modules
