--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "offline-plugin": "^4.5.5",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-helmet": "^3.3.0",
+    "react-helmet": "^4.0.0",
     "react-router": "next",
     "serialize-javascript": "^1.3.0"
   },
@@ -40,7 +40,7 @@
     "cross-env": "^3.1.4",
     "css-loader": "^0.26.1",
     "eventsource-polyfill": "^0.9.6",
-    "extract-text-webpack-plugin": "next",
+    "extract-text-webpack-plugin": "beta",
     "happypack": "^3.0.2",
     "koa-webpack-middleware": "^1.0.3",
     "react-hot-loader": "next",
