--- a/package.json
+++ b/package.json
@@ -19,12 +19,11 @@
     "serialize-javascript": "^1.3.0"
   },
   "scripts": {
+    "build": "yarn run clean && yarn build:client && yarn build:server",
+    "build:client": "cross-env NODE_ENV=production babel-node ./internal/scripts/build.js",
+    "build:server": "cross-env NODE_ENV=production babel src -d dist",
     "clean": "rimraf dist build",
-    "build": "yarn run clean && cross-env NODE_ENV=production babel src -d dist",
-    "build:client": "yarn run clean && cross-env NODE_ENV=production babel-node ./internal/scripts/build.js",
-    "webpack": "cross-env NODE_ENV=production webpack -p --progress --config ./internal/webpack/client.prod.config.js",
     "start": "cross-env NODE_ENV=development nodemon --exec babel-node ./src/server",
-    "start:dev": "cross-env NODE_ENV=development nodemon --exec babel-node ./internal/webpack/server",
     "serve": "cross-env NODE_ENV=production node dist/server"
   },
   "devDependencies": {
