--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "dependencies": {
     "immutable": "^3.8.1",
-    "koa": "next",
+    "koa": "^2.0.0",
     "koa-compress": "next",
     "koa-mount": "next",
     "koa-static": "next",
@@ -27,6 +27,7 @@
     "build:client": "cross-env NODE_ENV=production babel-node ./internal/scripts/build.js",
     "build:server": "cross-env NODE_ENV=production babel src -d dist",
     "clean": "rimraf dist build",
+    "lint": "eslint src",
     "start": "cross-env NODE_ENV=development nodemon --exec babel-node ./src/server",
     "serve": "cross-env NODE_ENV=production node dist/server"
   },
@@ -34,6 +35,7 @@
     "assets-webpack-plugin": "^3.5.0",
     "babel-cli": "^6.18.0",
     "babel-core": "^6.21.0",
+    "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
     "babel-polyfill": "^6.20.0",
     "babel-preset-env": "^1.1.8",
@@ -42,6 +44,11 @@
     "babel-preset-stage-3": "^6.17.0",
     "cross-env": "^3.1.4",
     "css-loader": "^0.26.1",
+    "eslint": "^3.14.0",
+    "eslint-config-airbnb": "^14.0.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^3.0.2",
+    "eslint-plugin-react": "^6.9.0",
     "eventsource-polyfill": "^0.9.6",
     "extract-text-webpack-plugin": "beta",
     "happypack": "^3.0.2",
