Update deps and `react-router`

--- a/package.json
+++ b/package.json
@@ -7,19 +7,18 @@
   "author": "Terrence Lam <skyuplam@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "immutable": "^3.8.1",
-    "koa": "^2.0.0",
+    "koa": "^2.2.0",
     "koa-compress": "next",
-    "koa-mount": "next",
+    "koa-mount": "^3.0.0",
     "koa-static": "next",
     "offline-plugin": "^4.5.5",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-helmet": "^4.0.0",
+    "react-helmet": "^5.0.2",
     "react-redux": "^5.0.2",
-    "react-router": "next",
+    "react-router": "^4.0.0",
     "redux": "^3.6.0",
-    "redux-immutable": "^3.0.10",
+    "seamless-immutable": "^7.1.2",
     "serialize-javascript": "^1.3.0"
   },
   "scripts": {
@@ -37,26 +36,24 @@
     "babel-core": "^6.21.0",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
-    "babel-polyfill": "^6.20.0",
-    "babel-preset-env": "^1.1.8",
-    "babel-preset-latest": "^6.16.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-env": "^1.3.2",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-3": "^6.17.0",
-    "cross-env": "^3.1.4",
-    "css-loader": "^0.26.1",
+    "cross-env": "^4.0.0",
+    "css-loader": "^0.28.0",
     "eslint": "^3.14.0",
     "eslint-config-airbnb": "^14.0.0",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^3.0.2",
-    "eslint-plugin-react": "^6.9.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.3",
     "eventsource-polyfill": "^0.9.6",
-    "extract-text-webpack-plugin": "beta",
-    "happypack": "^3.0.2",
+    "extract-text-webpack-plugin": "^2.1.0",
     "koa-webpack-middleware": "git://github.com/skyuplam/koa-webpack-middleware.git#local-git",
     "react-hot-loader": "next",
     "rimraf": "^2.5.4",
-    "style-loader": "^0.13.1",
-    "webpack": "beta",
+    "style-loader": "^0.16.1",
+    "webpack": "^2.2.1",
     "webpack-node-externals": "^1.5.4"
   }
 }
