--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "license": "MIT",
   "dependencies": {
     "koa": "^2.2.0",
-    "koa-compress": "next",
+    "koa-compress": "^2.0.0",
     "koa-mount": "^3.0.0",
-    "koa-static": "next",
+    "koa-static": "^3.0.0",
     "offline-plugin": "^4.5.5",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
